# pydor

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  MANIFEST.in  README.md  check.sh  coverage.sh  dist.sh  pydor.py  pydor_test.py  requirements-dev.txt  setup.cfg  setup.py
.ci/: requirements.txt
docker/: Dockerfile  build.sh  run.sh  sudoers
docs/: build.sh  conf.py  devel.rst  index.rst  modules.rst
docs/devel/: index.rst  pydor.rst
testdata/cmd/main/: pydor.ini
