[metadata]
name = pydor
description = PYthon Dependencies vendOR
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/pydor
project_urls =
	Source=https://github.com/jrmsdev/pydor
	Tracker=https://github.com/jrmsdev/pydor/issues
license = BSD
license_file = LICENSE
keywords = dependencies, deps, vendor
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: BSD License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
platforms = linux

[options]
zip_safe = true

[options.entry_points]
console_scripts =
	pydor=pydor:main

[bdist_wheel]
universal = 0

[aliases]
clean = clean -a
check = check -s -m
build = check build_py egg_info
dist = check sdist bdist_wheel

[tool:pytest]
minversion = 5.0
python_files = pydor_test.py
log_print = false
console_output_style = classic
filterwarnings =
	# bin/bottle.py:38: DeprecationWarning: the imp module is deprecated in
	# favour of importlib
	ignore:.*the imp module is deprecated.*:DeprecationWarning

	# bin/bottle.py:87: DeprecationWarning: Using or importing the ABCs from
	# 'collections' instead of from 'collections.abc' is deprecated, and in
	# 3.8 it will stop working
	ignore:.*Using or importing the ABCs.*:DeprecationWarning
